# badgevms-example-app-with-static-library

./: .gitmodules  CMakeLists.txt  README.md  build.sh  upload-to-badgehub.sh
cJSONbackup/: CMakeLists.txt  config  index  packed-refs
cJSONbackup/logs/: HEAD
cJSONbackup/objects/pack/: pack-99945327ae11939e17ccb0cee1995e346d86e319.idx  pack-99945327ae11939e17ccb0cee1995e346d86e319.pack
cJSONbackup/refs/heads/: master
dev/: update-sdk.sh
src/: sample_app.c
